move files, start salestech

--- a/Web/miniProjects/css/styles.css
+++ b/Web/miniProjects/css/styles.css
@@ -1,125 +1,5 @@
-/* Task 7 */
-html {
-  background: red url("/images/project 07 Resource - flowers.jpg") repeat;
-}
-
-/* Task 1 */
-#wrapper {
-  padding: 10px;
-  width: 440px;
-  /* Set width of wrapper */
-  margin: auto;
-  /* Set left and right margins automatically which centers the wrapper */
-}
-
-header {
-  background-color: green;
-}
-
-nav {
-  background-color: greenyellow;
-}
-
-section {
-  background-color: lightgreen;
-}
-
-footer {
-  background-color: lime;
-  clear: both;
-  /* This forces the footer to go under everything else */
-}
-
-aside {
-  width: 160px;
-  float: right;
-}
-
-/* Task 2 */
-#maincontent {
-  width: 260px;
-  float: left;
-  clear: both;
-  /* This forces the footer to go under everything else */
-}
-
-@media only screen and (min-width: 520px) {
-  /* html {
-    background-color: powderblue;
-  } */
-  #wrapper {
-    width: 800px;
-  }
-
-  #maincontent {
-    width: initial;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  /* html {
-    background-color: white;
-  } */
-  #wrapper {
-    width: 1200px;
-  }
-
-  #maincontent {
-    width: 1020px;
-  }
-}
-/* Task 3 */
-ul {
-  list-style-type: none;
-  background-color: yellow;
-  float: left;
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-}
-
-nav li {
-  display: inline;
-  /* Inline element have no line break before or after the element. This forces the list to be on one line */
-}
-
-a {
-  text-decoration: none;
-  color: white;
-  background-color: black;
-  width: 150px;
-  float: left;
-  border-right: 1px solid white;
-  padding: 2px 6px;
-}
-
-a:hover {
-  color: yellow;
-  background-color: red;
-}
-
-/* Task 5 */
-#wrapper {
-  border-radius: 10px;
-  /* Add this line */
-  border: 5px solid black;
-  /* Add this line */
-}
-
-#maincontent {
-  border: 5px solid white;
-  border-radius: 10px;
-}
-
-/* Task 7 */
-#wrapper {
-  background-color: green;
-  background: lime;
-  /* Fall-back for browsers that don't support rgba */
-  background: rgba(0, 255, 0, 0.5);
-  /* green */
-  box-shadow: 10px 10px 5px #3c3c3c;
-  /* h-shadow v-shadow blur spread color
-  inset; */
+#navbar_logo {
+  height: 40px;
 }
 
 /*# sourceMappingURL=styles.css.map */
