--- a/Web/jsTutorial/index.pug
+++ b/Web/jsTutorial/index.pug
@@ -5,4 +5,4 @@ head
   script(type="text/javascript" src="js/main.js")
 body 
   div#main Hello 
-  button(onClick="d6()") Click Me 
+  button(onClick="d6(this)") Click Me 
